Lista de fornecedores funcionando

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,5 @@ commpany=Engecopi
 title=Fornecedor
 shortName=Fornecedor
 iconPath=icons/logo.png
-mainClass=br.com.astrosoft.devolucao.view.devolucao.DevolucaoPendenteView
-userUtilImpl=br.com.astrosoft.devolucao.model.UserUtilImpl
+mainClass=br.com.astrosoft.fornecedor.view.fornecedor.FornecedorView
+userUtilImpl=br.com.astrosoft.fornecedor.model.UserUtilImpl
